--- a/index.html
+++ b/index.html
@@ -2,181 +2,98 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>La Cápsula</title>
 <style>
-/* Basic Reset */
-*{margin:0;padding:0;box-sizing:border-box;}
-html,body{height:100%;font-family:'Montserrat',Arial,sans-serif;color:#fff;background:#000;overflow-x:hidden;}
-nav{position:fixed;top:0;left:0;width:100%;display:flex;justify-content:space-between;align-items:center;padding:10px 20px;background:rgba(0,0,0,0.6);backdrop-filter:blur(4px);z-index:1000;}
-nav h1{font-size:1.5rem;text-shadow:0 2px 4px rgba(0,0,0,0.6);}
-button.buy{background:#1DE9B6;border:none;padding:10px 20px;font-weight:bold;border-radius:4px;color:#fff;cursor:pointer;box-shadow:0 2px 6px rgba(0,0,0,0.4);transition:background 0.3s;}
-button.buy:hover{background:#19c9a4;}
-#scene{position:relative;height:100vh;width:100%;overflow:hidden;}
-#background{position:absolute;top:0;left:0;width:100%;height:100%;background:radial-gradient(circle at 50% 60%,rgba(255,255,255,0.1),transparent 70%);z-index:0;}
-.particle{position:absolute;border-radius:50%;background:radial-gradient(circle,rgba(180,220,255,0.3),rgba(0,0,255,0) 60%);pointer-events:none;}
-.capsule{position:absolute;border-radius:50%;border:2px solid #fff;width:80px;height:80px;display:flex;align-items:center;justify-content:center;background:radial-gradient(circle at 30% 30%,rgba(255,255,255,0.6),rgba(255,255,255,0.1) 40%,rgba(255,255,255,0.05));box-shadow:0 0 8px rgba(255,255,255,0.3);transition:transform 0.2s;}
-.capsule span{font-size:1.2rem;font-weight:bold;text-shadow:0 1px 3px rgba(0,0,0,0.7);pointer-events:none;}
-.tooltip{position:absolute;padding:8px 12px;background:rgba(0,0,0,0.8);border:1px solid #1DE9B6;border-radius:4px;font-size:0.9rem;pointer-events:none;white-space:pre-line;z-index:1001;}
-#info{padding:80px 20px 40px;font-size:1.1rem;text-align:center;background:#000;}
-#info h2{font-size:2rem;margin-bottom:10px;}
-#info p{margin:10px 0;}
-#modal{position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.8);display:flex;align-items:center;justify-content:center;z-index:2000;display:none;}
-#modal form{background:#111;padding:20px;border-radius:6px;width:90%;max-width:400px;box-shadow:0 0 10px rgba(0,0,0,0.5);}
-#modal label{display:block;margin-top:10px;font-size:0.9rem;}
-#modal input,#modal select{width:100%;padding:8px;margin-top:4px;background:#222;border:1px solid #555;color:#fff;border-radius:4px;}
-#modal button{margin-top:15px;}
-@media(max-width:600px){.capsule{width:60px;height:60px;}}
+html,body{margin:0;height:100%;overflow:hidden;background:#000;font-family:Arial,Helvetica,sans-serif;color:#fff}
+#background{position:fixed;inset:0;background:radial-gradient(circle at center,#000 0%,#111 100%);pointer-events:none;overflow:hidden;z-index:0}
+.particle{position:absolute;border-radius:50%;width:6px;height:6px;background:radial-gradient(circle,rgba(180,220,255,0.4),rgba(0,0,255,0) 70%);filter:blur(2px);opacity:.3}
+#scene{position:fixed;inset:0;perspective:1200px;z-index:1;pointer-events:none}
+.bubble{position:absolute;top:50%;left:50%;width:80px;height:80px;margin:-40px;border-radius:50%;border:2px solid #fff;box-shadow:0 0 8px rgba(255,255,255,.2),inset 0 0 12px rgba(0,0,0,.4),0 4px 12px rgba(0,0,0,.5);background:radial-gradient(circle at 30% 30%,rgba(255,255,255,.6) 0%,rgba(200,200,200,.15) 60%,rgba(50,50,50,.8) 100%);display:flex;align-items:center;justify-content:center;color:#fff;font-weight:bold;text-shadow:0 1px 2px rgba(0,0,0,.6);transform-style:preserve-3d;pointer-events:none}
+.bubble.interactive{pointer-events:auto}
+.bubble span{pointer-events:none}
+#tooltip{position:fixed;z-index:2;background:rgba(0,0,0,.8);border:1px solid #fff;border-radius:4px;padding:6px 10px;font-size:.9rem;display:none;white-space:nowrap;pointer-events:none}
+@media(max-width:600px){.bubble{width:60px;height:60px;margin:-30px}}
 </style>
 </head>
 <body>
-<nav>
-<h1>La Cápsula</h1>
-<button class="buy">BUY A CAPSULE</button>
-</nav>
-<div id="scene">
 <div id="background"></div>
-<!-- Capsules -->
-</div>
-<section id="info">
-<h2>What is La Cápsula?</h2>
-<p>Be part of a unique digital living artwork. Each capsule is a unique spot in this infinite breathing field.</p>
-<p id="counter">0 / 9 joined</p>
-<button class="buy">BUY A CAPSULE</button>
-</section>
-<div id="modal">
-<form id="buyForm">
-<h3>Claim a Capsule</h3>
-<label for="capsuleSelect">Choose Capsule</label>
-<select id="capsuleSelect" required></select>
-<label for="message">Message (max 100 chars)</label>
-<input id="message" maxlength="100" required>
-<label for="url">Link (https, optional)</label>
-<input id="url" pattern="https?://.*">
-<button type="submit" class="buy">Submit</button>
-</form>
-</div>
+<div id="scene"></div>
+<div id="tooltip"></div>
 <script>
-/* ----- Data Structures ----- */
-const capsuleData=[];
-for(let i=1;i<=9;i++){
- capsuleData.push({id:i,x:Math.random()*600-300,y:Math.random()*400-200,z:Math.random()*600-300,phiX:Math.random()*Math.PI*2,phiY:Math.random()*Math.PI*2,phiZ:Math.random()*Math.PI*2,msg:'',url:'',claimed:false});
-}
+const count=100,startInterval=1,speed=80,startZ=-2500,zoneMinZ=-360,zoneMaxZ=360,endZ=800;
+const capsulesData=Array.from({length:count},(_,i)=>({
+ id:i+1,
+ photoUrl:`https://via.placeholder.com/64?text=${i+1}`,
+ message:`Message for capsule ${i+1}`,
+ link:'',
+ el:null,
+ baseX:(Math.random()-0.5)*window.innerWidth*0.8,
+ baseY:(Math.random()-0.5)*window.innerHeight*0.8,
+ phiX:Math.random()*Math.PI*2,
+ phiY:Math.random()*Math.PI*2,
+ startTime:i*startInterval,
+ z:startZ,
+ interactive:false,
+ done:false
+}));
 const particles=[];
-for(let i=0;i<20;i++){
- particles.push({el:null,x:Math.random()*window.innerWidth,y:Math.random()*window.innerHeight,amp:50+Math.random()*50,speed:0.2+Math.random()*0.3,phase:Math.random()*Math.PI*2,size:20+Math.random()*30});
-}
-
-/* ----- Elements ----- */
-const scene=document.getElementById('scene');
-const bg=document.getElementById('background');
-const counter=document.getElementById('counter');
-const modal=document.getElementById('modal');
-const form=document.getElementById('buyForm');
-const select=document.getElementById('capsuleSelect');
-const tooltip=document.createElement('div');
-tooltip.className='tooltip';
-scene.appendChild(tooltip);
-let tooltipTarget=null;
-
-/* ----- Initialize ----- */
 function init(){
- // create particles
- particles.forEach(p=>{
+ const scene=document.getElementById('scene');
+ const bg=document.getElementById('background');
+ for(let i=0;i<20;i++){
   const d=document.createElement('div');
   d.className='particle';
-  d.style.width=d.style.height=p.size+'px';
-  scene.appendChild(d);p.el=d;
- });
- // create capsules
- capsuleData.forEach(c=>{
+  bg.appendChild(d);
+  particles.push({el:d,baseX:Math.random()*window.innerWidth,baseY:Math.random()*window.innerHeight,ampX:20+Math.random()*30,ampY:20+Math.random()*30,phaseX:Math.random()*Math.PI*2,phaseY:Math.random()*Math.PI*2,speedX:0.05+Math.random()*0.05,speedY:0.05+Math.random()*0.05,scaleBase:0.5+Math.random()*0.5,phaseZ:Math.random()*Math.PI*2,speedZ:0.05+Math.random()*0.05});
+ }
+ capsulesData.forEach(c=>{
   const d=document.createElement('div');
-  d.className='capsule';
-  const span=document.createElement('span');
-  span.textContent=c.id;d.appendChild(span);
-  scene.appendChild(d);c.el=d;
-  d.addEventListener('mouseenter',()=>showTooltip(c));
-  d.addEventListener('mouseleave',hideTooltip);
-  d.addEventListener('click',(e)=>{showTooltip(c);e.stopPropagation();});
+  d.className='bubble';
+  d.innerHTML=`<span>${c.id}</span>`;
+  scene.appendChild(d);
+  c.el=d;
+  d.addEventListener('pointerenter',()=>{if(c.interactive)showTooltip(c)});
+  d.addEventListener('pointerleave',hideTooltip);
+  d.addEventListener('click',e=>{if(c.interactive){showTooltip(c);e.stopPropagation();}});
  });
- updateSelectOptions();
- document.querySelectorAll('.buy').forEach(btn=>btn.addEventListener('click',openModal));
- modal.addEventListener('click',e=>{if(e.target===modal)closeModal();});
- document.body.addEventListener('click',e=>{if(tooltipTarget&&!tooltip.contains(e.target))hideTooltip();});
- form.addEventListener('submit',claimCapsule);
+ document.addEventListener('click',hideTooltip);
  requestAnimationFrame(animate);
 }
-
-/* ----- Animation ----- */
 function animate(t){
  const time=t/1000;
- // particles
  particles.forEach(p=>{
-  p.phase+=p.speed*0.01;
-  const x=p.x+p.amp*Math.sin(time*p.speed+p.phase);
-  const y=p.y+p.amp*Math.cos(time*p.speed+p.phase);
-  p.el.style.transform=`translate(${x}px,${y}px)`;
+  const x=p.baseX+Math.sin(time*p.speedX+p.phaseX)*p.ampX;
+  const y=p.baseY+Math.sin(time*p.speedY+p.phaseY)*p.ampY;
+  const s=p.scaleBase+0.2*Math.sin(time*p.speedZ+p.phaseZ);
+  p.el.style.transform=`translate(${x}px,${y}px) scale(${s})`;
  });
- // capsules
- capsuleData.forEach(c=>{
-  const range=300;
-  c.x+=Math.sin(time*0.2+c.phiX)*0.3;
-  c.y+=Math.cos(time*0.15+c.phiY)*0.3;
-  c.z+=Math.sin(time*0.25+c.phiZ)*0.3;
-  // wrap
-  if(c.x>range) c.x=-range; if(c.x<-range) c.x=range;
-  if(c.y>range) c.y=-range; if(c.y<-range) c.y=range;
-  if(c.z>range) c.z=-range; if(c.z<-range) c.z=range;
-  const scale=1+(c.z/300);
-  c.el.style.transform=`translate(calc(50% + ${c.x}px),calc(50% + ${c.y}px)) scale(${scale})`;
+ let interactiveCount=0;
+ capsulesData.forEach(c=>{
+  if(c.done)return;
+  const dt=time-c.startTime;
+  c.z=dt<0?startZ:startZ+dt*speed;
+  if(c.z>endZ){c.el.style.display='none';c.done=true;return;}
+  const x=c.baseX+Math.sin(time*0.3+c.phiX)*30;
+  const y=c.baseY+Math.cos(time*0.25+c.phiY)*30;
+  c.el.style.transform=`translate3d(${x}px,${y}px,${c.z}px)`;
+  const active=c.z>=zoneMinZ&&c.z<=zoneMaxZ;
+  if(active)interactiveCount++;
+  if(active!==c.interactive){c.interactive=active;c.el.classList.toggle('interactive',active);}
  });
- // background breathing
- const glow=0.5+0.5*Math.sin(time*0.5);
- bg.style.background=`radial-gradient(circle at 50% 60%,rgba(255,255,255,${0.05+glow*0.05}),transparent 70%)`;
  requestAnimationFrame(animate);
 }
-
-/* ----- Tooltip ----- */
 function showTooltip(c){
- tooltipTarget=c;
+ const tip=document.getElementById('tooltip');
  const rect=c.el.getBoundingClientRect();
- tooltip.style.display='block';
- tooltip.innerHTML=c.claimed?`<strong>Capsule #${c.id}</strong><br>${c.msg}${c.url?`<br><a href="${c.url}" target="_blank">${c.url}</a>`:''}`:`Capsule #${c.id} – Empty`;
- const tooltipRect=tooltip.getBoundingClientRect();
- const top=rect.top-tooltipRect.height-8;
- const left=rect.left+(rect.width-tooltipRect.width)/2;
- tooltip.style.top=`${top}px`;
- tooltip.style.left=`${left}px`;
+ tip.textContent=c.message;
+ tip.style.display='block';
+ const tw=tip.offsetWidth;const th=tip.offsetHeight;
+ const left=rect.left+rect.width/2-tw/2;
+ const top=rect.top-th-8;
+ tip.style.transform=`translate(${left}px,${top}px)`;
 }
-function hideTooltip(){
- tooltip.style.display='none';
- tooltipTarget=null;
-}
-
-/* ----- Modal Logic ----- */
-function openModal(){modal.style.display='flex';}
-function closeModal(){modal.style.display='none';form.reset();}
-function updateSelectOptions(){
- select.innerHTML='';
- capsuleData.filter(c=>!c.claimed).forEach(c=>{
-  const op=document.createElement('option');
-  op.value=c.id;op.textContent=c.id;select.appendChild(op);
- });
- if(select.options.length===0){select.disabled=true;}
- counter.textContent=`${capsuleData.filter(c=>c.claimed).length} / 9 joined`;
-}
-function claimCapsule(e){
- e.preventDefault();
- const id=parseInt(select.value,10);
- const cap=capsuleData.find(c=>c.id===id);
- if(!cap||cap.claimed)return;
- cap.msg=document.getElementById('message').value.trim();
- cap.url=document.getElementById('url').value.trim();
- cap.claimed=true;
- updateSelectOptions();
- closeModal();
- if(tooltipTarget===cap)showTooltip(cap);
-}
+function hideTooltip(){document.getElementById('tooltip').style.display='none';}
 window.addEventListener('load',init);
 </script>
 </body>
